--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -26,7 +26,10 @@ const projects= await getCollection('projects')
 		<nav>
 			{projects.map((project)=>{
 				return <a href={`/projects/${project.slug}`}>
-					{project.data.thumbnail && <Image src={project.data.thumbnail} alt=""/>}
+					{project.data.thumbnail && <Image src={project.data.thumbnail} 
+					widths={[240, 540, 720, project.data.thumbnail.width]}
+  sizes={`(max-width: 360px) 240px, (max-width: 720px) 540px, (max-width: 1600px) 720px, ${project.data.thumbnail.width}px`}
+	alt=""/>}
 					
 					{project.data.title}</a>
 			})}
