--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -20,6 +20,7 @@ const projects= await getCollection('projects')
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="generator" content={Astro.generator} />
 		<title>{title}</title>
+		<base href={import.meta.env.BASE_URL}>
 	</head>
 	<body>
 		<!-- basic nav that creates a link for each project in the projects collection -->
