--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -8,7 +8,13 @@ export interface Props {
 }
 
 const { title } = Astro.props;
-const projects= await getCollection('projects')
+const projects= await getCollection('projects');
+
+
+import { ViewTransitions } from 'astro:transitions';
+
+
+
 ---
 
 <!DOCTYPE html>
@@ -21,13 +27,14 @@ const projects= await getCollection('projects')
 		<meta name="generator" content={Astro.generator} />
 		<title>{title}</title>
 		<base href={process.env.BASE_URL || "/"}>
+		<ViewTransitions/>
 	</head>
-	<body>
+	<body >
 		<!-- basic nav that creates a link for each project in the projects collection -->
 		<nav>
 			{projects.map((project)=>{
 				return <a href={`/projects/${project.slug}`}>
-					{project.data.thumbnail && <Image src={project.data.thumbnail} 
+					{project.data.thumbnail && <Image style={{width:'100px'}} src={project.data.thumbnail} 
 					widths={[240, 540, 720, project.data.thumbnail.width]}
   sizes={`(max-width: 360px) 240px, (max-width: 720px) 540px, (max-width: 1600px) 720px, ${project.data.thumbnail.width}px`}
 	alt=""/>}
@@ -35,6 +42,6 @@ const projects= await getCollection('projects')
 					{project.data.title}</a>
 			})}
 		</nav>
-		<slot />
+		<slot  />
 	</body>
 </html>
