--- a/src/components/pagebuilder/Column.astro
+++ b/src/components/pagebuilder/Column.astro
@@ -1,10 +1,12 @@
 ---
+const {props}=Astro;
+const {targetWidth,flexGrow}=props;
 ---
 <style>
   .column{
     border:1px solid red;
   }
 </style>
-<div class="column">
+<div class="column" style={`flex-basis:${targetWidth};flex-grow:${flexGrow?"1":"0"}`}>
   <slot/>
 </div>
