--- a/src/styles.css
+++ b/src/styles.css
@@ -1,8 +1,7 @@
 html {
-  max-width: 70ch;
-  padding: 3rem 1rem;
   margin: auto;
-  line-height: 1.75;
+  padding: 0;
+  line-height: 1.25;
   font-size: 1.25rem;
   font-family: sans-serif;
 }
