--- a/src/pages/projects/[slug].astro
+++ b/src/pages/projects/[slug].astro
@@ -21,5 +21,5 @@ export async function getStaticPaths() {
 
 <Layout title={post.data.title}>
   <h1>{post.data.title}</h1>
-  <Content components={{MultiColumn}} />
+  <Content />
 </Layout>
