--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -39,6 +39,7 @@ const isDev = process.env.NODE_ENV === "development";
 			display: block;
 			width: 100%;
 			max-width: 600px;
+			 overflow-wrap: break-word;
 		}
 		.floating-edit{
 			
