--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -45,7 +45,8 @@ const isDev = process.env.NODE_ENV === "development";
 			
 			
 			position: fixed;
-			transform:translateX(50%) translateX(-20px) rotate(-90deg) ;
+			transform:translateX(50%) translateX(-20px) rotate(-90deg)  ;
+			top:50%;
 			right:0;
 		}
 		.floating-edit a{padding:.5rem;background-color: lightpink;
