--- a/src/components/portfolioViews/card/CardItem.astro
+++ b/src/components/portfolioViews/card/CardItem.astro
@@ -1,8 +1,28 @@
 ---
+import Image from "astro/components/Image.astro";
 const {props}=Astro
----
 
-<div>
-  CARD ITEM
+const title=props.itemData.data.title;
+const url="/projects/"+props.itemData.slug
+const thumbnail=props.itemData.data.thumbnail
+console.log(thumbnail)
+---
+<style>
+  .card-item{
+
+  }
+  .card-image-container{
+    width:200px;
+    aspect-ratio: 3/2;
+    object-fit: cover;
+  }
+</style>
+<div class="card-item">
+  <div class="card-image-container" style={{backgroundColor:props.itemData.data.accent}}>
+{thumbnail ?<Image src={thumbnail} alt=""/>:<div class="card-bg-color" ></div>}
+  
+  </div>
+  
+  {props.itemData.data.title}
   <slot />
 </div>
