cleans up some code in topnav

--- a/src/components/sitelayout/nav/TopNav.astro
+++ b/src/components/sitelayout/nav/TopNav.astro
@@ -3,10 +3,8 @@ import { getCollection } from "astro:content";
 
 const homepage = await getCollection('homepage') || [];
 const pages = await getCollection('pages') || [];
-const allPages = [...homepage,...pages]
-// console.log(allPages)
-const cleanedPages = allPages.map(page=>{
-  // console.log(page)
+
+const cleanedPages = [...homepage,...pages].map(page=>{
   if (page.collection==='homepage'){
 return { url:'/',title: page.data.title||'Home'}
   }
