--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,7 +4,7 @@ import Layout from '../layouts/Layout.astro';
 
 
 const posts = await getCollection('homepage');
-console.log('homepage',posts);
+// console.log('homepage',posts);
 const page=posts[0]
 const { Content } = await page.render();
 ---
