--- a/src/pages/projects/[slug].astro
+++ b/src/pages/projects/[slug].astro
@@ -1,16 +1,13 @@
 ---
 import { getCollection, getEntry } from 'astro:content';
 import Layout from '../../layouts/Layout.astro';
-import MultiColumn from '../../components/pagebuilder/MultiColumn.astro';
-import Column from '../../components/pagebuilder/Column.astro';
-
 const { slug } = Astro.params;
 if (!slug) throw new Error('Slug not found');
 const post = await getEntry('projects', slug);
 
 if (!post) throw new Error('No post found for this slug');
 const { Content } = await post.render();
-console.log(post);
+// console.log(post);
 
 // Generate static pages
 export async function getStaticPaths() {
