--- a/src/components/portfolioViews/PortfolioViewWrapper.astro
+++ b/src/components/portfolioViews/PortfolioViewWrapper.astro
@@ -7,11 +7,13 @@ import CardContainer from './card/CardContainer.astro';
 import CardItem from './card/CardItem.astro'
 import TileContainer  from './tile/TileContainer.astro'
 import TileItem  from './tile/TileItem.astro'
-
+import SBSContainer from './sideBySide/SBSContainer.astro';
+import SBSItem from './sideBySide/SBSItem.astro';
 
 const componentMappings = {
   'cards':{Container:CardContainer,Item:CardItem},
-  'tiles':{Container:TileContainer,Item:TileItem}
+  'tiles':{Container:TileContainer,Item:TileItem},
+  'sbs':{Container:SBSContainer,Item:SBSItem}
 }
 
 let projectList:{
@@ -32,7 +34,7 @@ if (props.projectSource.discriminant==="selected"){
   //@ts-ignore;
   projectList=allProjects;
 }
-let validType:"cards"|"tiles"="cards"
+let validType:"cards"|"tiles"|"sbs"="cards"
 if (Object.keys(componentMappings).includes(props.portfolioLayout)){
 validType=props.portfolioLayout
 }
