starts to implement layout switcher

--- a/src/components/pagebuilder/MultiColumn.astro
+++ b/src/components/pagebuilder/MultiColumn.astro
@@ -1,6 +1,6 @@
 ---
 const {props}=Astro;
-const {justifyContent,gap,alignItems}=props
+const {justifyContent,gap,alignItems,flexDirection}=props
 ---
 <style>
 .multicolumn_container{
@@ -8,6 +8,6 @@ const {justifyContent,gap,alignItems}=props
   flex-wrap: wrap;
 }
 </style>
-<div class="multicolumn_container" style={{justifyContent:justifyContent,gap:gap,alignItems:alignItems}}>
+<div class="multicolumn_container" style={{justifyContent:justifyContent,gap:gap,alignItems:alignItems,flexDirection:flexDirection}}>
   <slot />
 </div>
