--- a/src/components/sitelayout/Sidebar/SidebarNav.astro
+++ b/src/components/sitelayout/Sidebar/SidebarNav.astro
@@ -7,8 +7,8 @@ const sidebarWidth=settings.sidebar.sidebarWidth
 </style>
 <style is:global define:vars={{sidebarWidth:sidebarWidth}}>
   .header-for-sidebar{
-    width:var(--sidebarWidth);
-    background-color: yellow;
+    /* width:var(--sidebarWidth); */
+    /* background-color: yellow; */
   }
   .body-for-sidebar{
     display: flex;
@@ -16,5 +16,5 @@ const sidebarWidth=settings.sidebar.sidebarWidth
 </style>
 
 <div>
-  SIDEBAR {sidebarWidth}
+   {sidebarWidth}
 </div>
