--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,8 +1,7 @@
 ---
 import { getCollection } from 'astro:content';
 import '../styles.css'
-import { Image } from 'astro:assets';
-import LayoutWrapper from '../components/sitelayout/nav/LayoutWrapper.astro';
+import LayoutSwitcher from '../components/sitelayout/LayoutSwitcher.astro';
 export interface Props {
 	title: string;
 }
@@ -39,7 +38,7 @@ const isDev = process.env.NODE_ENV === "development";
 			display: block;
 			width: 100%;
 			margin:0 auto;
-			max-width: 600px;
+			max-width: 800px;
 			 overflow-wrap: break-word;
 		}
 		.floating-edit{
@@ -56,9 +55,9 @@ const isDev = process.env.NODE_ENV === "development";
 		}
 	
 	</style>
-	<LayoutWrapper>
+	<LayoutSwitcher>
 <slot  />
-	</LayoutWrapper>
+	</LayoutSwitcher>
 	
 
 		{isDev && <div class="floating-edit">
