runs astro formatting

--- a/src/components/sitelayout/LayoutSwitcher.astro
+++ b/src/components/sitelayout/LayoutSwitcher.astro
@@ -28,16 +28,11 @@ let PageLayout;
 switch (settings.menu.position) {
   case "sidebar":
     PageLayout = SidebarPage;
-  default:
-    PageLayout = SidebarPage;
+  default: 
+    PageLayout =SidebarPage;
 }
 ---
 
-<style>
-  body {
-    padding: 0;
-    margin: 0;
-  }
-</style>
-
-
+<PageLayout menuItems={cleanedPages}>
+  <slot />
+</PageLayout>
