--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,69 +1,66 @@
 ---
-import { getCollection } from 'astro:content';
-import '../styles.css'
-import LayoutSwitcher from '../components/sitelayout/LayoutSwitcher.astro';
+import { getCollection } from "astro:content";
+import "../styles.css";
+import LayoutSwitcher from "../components/sitelayout/LayoutSwitcher.astro";
 export interface Props {
-	title: string;
+  title: string;
 }
 
 const { title } = Astro.props;
-const projects= await getCollection('projects');
+const projects = await getCollection("projects");
 
-
-import { ViewTransitions } from 'astro:transitions';
+import { ViewTransitions } from "astro:transitions";
 
 const isDev = process.env.NODE_ENV === "development";
-
 ---
 
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-	<head>
-		<meta charset="UTF-8" />
-		<meta name="description" content="Astro description">
-		<meta name="viewport" content="width=device-width" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<meta name="generator" content={Astro.generator} />
-		<title>{title}</title>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="description" content="Astro description" />
+    <meta name="viewport" content="width=device-width" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <meta name="generator" content={Astro.generator} />
+    <title>{title}</title>
 
-		<ViewTransitions/>
-	</head>
-	<style is:global>
-		main{
-			/* display: flex; */
-			/* flex-direction: column; */
-			align-items: center;
-		}
-		main > * {
-			display: block;
-			width: 100%;
-			margin:0 auto;
-			max-width: 800px;
-			 overflow-wrap: break-word;
-		}
-		.floating-edit{
-			
-			
-			position: fixed;
-			transform:translateX(50%) translateX(-20px) rotate(-90deg)  ;
-			top:50%;
-			right:0;
-		}
-		.floating-edit a{padding:.5rem;background-color: lightpink;
-			text-decoration: none;
+    <ViewTransitions />
+    <style is:global>
+      main {
+        /* display: flex; */
+        /* flex-direction: column; */
+        align-items: center;
+      }
+      main > * {
+        display: block;
+        width: 100%;
+        margin: 0 auto;
+        max-width: 800px;
+        overflow-wrap: break-word;
+      }
+      .floating-edit {
+        position: fixed;
+        transform: translateX(50%) translateX(-20px) rotate(-90deg);
+        top: 50%;
+        right: 0;
+      }
+      .floating-edit a {
+        padding: 0.5rem;
+        background-color: lightpink;
+        text-decoration: none;
+      }
+    </style></head
+  >
 
-		}
-	
-	</style>
-	<LayoutSwitcher>
-<slot  />
-	</LayoutSwitcher>
-	
+  <LayoutSwitcher>
+    <slot />
+  </LayoutSwitcher>
 
-		{isDev && <div class="floating-edit">
-			<a href="/keystatic">			Click here to enter the site editor</a>
-
-		</div>}
-		
-
+  {
+    isDev && (
+      <div class="floating-edit">
+        <a href="/keystatic"> Click here to enter the site editor</a>
+      </div>
+    )
+  }
 </html>
