--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -26,6 +26,11 @@ const isDev = process.env.NODE_ENV === "development";
 
     <ViewTransitions />
     <style is:global>
+      * {
+        padding: 0;
+        margin: 0;
+        box-sizing: border-box;
+      }
       main {
         /* display: flex; */
         /* flex-direction: column; */
