--- a/src/components/sitelayout/Sidebar/SidebarNav.astro
+++ b/src/components/sitelayout/Sidebar/SidebarNav.astro
@@ -1,8 +1,8 @@
 ---
-const { items } = Astro.props;
+import menuItems from "../../helpers/menuItems";
+
 import settings from "../../helpers/settingsHelper";
 const sidebarWidth = settings.sidebar.sidebarWidth;
-console.log(items);
 ---
 
 <style></style>
@@ -15,6 +15,10 @@ console.log(items);
     display: flex;
   }
 </style>
-
-<div>
-</div>
+<nav>
+  {
+    menuItems.map((item) => {
+      return <a href={item.url}>{item.title}</a>;
+    })
+  }
+</nav>
