--- a/src/components/sitelayout/Sidebar/SidebarNav.astro
+++ b/src/components/sitelayout/Sidebar/SidebarNav.astro
@@ -5,7 +5,16 @@ import settings from "../../helpers/settingsHelper";
 const sidebarWidth = settings.sidebar.sidebarWidth;
 ---
 
-<style></style>
+<style>
+  .menu-main,
+  .menu-submenu {
+    display: flex;
+    flex-direction: column;
+  }
+  .menu-submenu {
+    padding-left: 1rem;
+  }
+</style>
 <style is:global define:vars={{ sidebarWidth: sidebarWidth }}>
   .header-for-sidebar {
     /* width:var(--sidebarWidth); */
@@ -15,10 +24,23 @@ const sidebarWidth = settings.sidebar.sidebarWidth;
     display: flex;
   }
 </style>
-<nav>
+<nav class="menu-main">
   {
     menuItems.map((item) => {
-      return <a href={item.url}>{item.title}</a>;
+      if (item.subItems.length > 0) {
+        return (
+          <>
+            <a href={item.url}>{item.title}</a>
+            <div class="menu-submenu">
+              {item.subItems.map((subItem) => {
+                return <a href={subItem.url}>{subItem.title}</a>;
+              })}
+            </div>
+          </>
+        );
+      } else {
+        return <a href={item.url}>{item.title}</a>;
+      }
     })
   }
 </nav>
