--- a/src/components/sitelayout/Topbar/TopbarPage.astro
+++ b/src/components/sitelayout/Topbar/TopbarPage.astro
@@ -1,5 +1,5 @@
 ---
-import SidebarNav from "./SidebarNav.astro";
+import TopbarNav from "./TopbarNav.astro";
 ---
 
 <style>
@@ -27,7 +27,7 @@ import SidebarNav from "./SidebarNav.astro";
 </style>
 <body>
   <header>
-    <SidebarNav />
+    <TopbarNav />
   </header>
   <main>
     <slot />
