fixes import issues in layout switcher

--- a/src/components/sitelayout/LayoutSwitcher.astro
+++ b/src/components/sitelayout/LayoutSwitcher.astro
@@ -3,7 +3,7 @@ import settings from "../helpers/settingsHelper";
 
 // import templates
 import SidebarPage from "./Sidebar/SidebarPage.astro";
-import TopbarPage from "./TopBar/TopbarPage.astro";
+import TopbarPage from "./Topbar/TopbarPage.astro";
 
 console.log(settings.menu.position);
 // const MenuComponent = Sidebar;
