wip on sbs layout

--- a/src/components/portfolioViews/sideBySide/SBSContainer.astro
+++ b/src/components/portfolioViews/sideBySide/SBSContainer.astro
@@ -6,6 +6,7 @@ const { props } = Astro;
   .sbs-container {
     display: flex;
     flex-direction: column;
+    align-items: stretch;
     /* controlled gap */
   }
 </style>
